--- a/public/index.html
+++ b/public/index.html
@@ -1,269 +1,136 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login - Revezamento Turma B</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Turma B</title>
+  <link rel="icon" type="image/png" href="image/favicon.jpeg">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #0d0d0d, #1a1a2e);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    /* Reset básico para garantir que não há margens ou paddings inesperados */
+    * {
       margin: 0;
-      color: #fff;
-      text-align: center;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* Estilo geral do corpo */
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #1a1a1a; /* Fundo escuro */
+      color: #ffffff;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 400;
       overflow: hidden;
-      position: relative;
     }
 
-    .contato-topo {
-      position: absolute;
-      top: 3px;
-      left: 3px;
-      display: flex;
-      align-items: center;
-      background-color: rgba(0, 255, 255, 0.05);
-      padding: 6px 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 255, 255, 0.2);
-      font-size: 0.9rem;
+    /* Estilo do container principal */
+    .container {
+      text-align: center;
+      animation: fadeIn 2.5s ease-out forwards;
     }
 
-    .contato-topo i {
-      font-size: 1.2rem;
-      color: #25D366;
-      margin-right: 8px;
+    /* Efeito de animação de fade-in */
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: scale(0.8);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
-    .contato-topo span {
-      color: #ccc;
-    }
-
-    h1 {
-      font-size: 2.8rem;
+    /* Título principal */
+    .title {
+      font-size: 3rem;
       font-weight: 700;
-      color: #00f6ff;
-      margin-bottom: 1.2rem;
-      text-shadow: 0 0 8px #00f6ff;
+      color: #00d8ff; /* Azul claro para contraste */
+      letter-spacing: 3px;
+      margin-bottom: 30px;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+      transition: font-size 0.3s ease, text-shadow 0.3s ease;
     }
 
-    .btn-login {
-      font-size: 1.1rem;
-      padding: 12px 30px;
-      border-radius: 30px;
-      margin: 10px;
-      width: auto;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 12px rgba(0, 255, 255, 0.4);
+    /* Texto de "loading" */
+    .loading {
+      font-size: 1.5rem;
+      font-weight: 400;
+      color: #aaa;
+      opacity: 0;
+      animation: fadeIn 2s ease-out 2s forwards;
+      letter-spacing: 1px;
+      margin-top: 20px;
     }
 
-    .btn-login:hover:enabled {
-      background-color: #00f6ff;
-      color: #000;
-      border-color: #00f6ff;
-      box-shadow: 0 0 20px #00f6ff;
+    /* Animação de efeito de brilho nas letras */
+    .title span {
+      display: inline-block;
+      animation: glow 1.5s ease-in-out infinite alternate;
     }
 
-    #loginAdminForm {
-      background: rgba(20, 20, 40, 0.85);
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 10px 40px rgba(0, 255, 255, 0.2);
-      max-width: 360px;
-      width: 100%;
-      margin-top: 1.5rem;
-      display: none;
-      transition: opacity 0.4s ease;
+    @keyframes glow {
+      0% {
+        text-shadow: 0 0 10px #00d8ff, 0 0 20px #00d8ff, 0 0 30px #00d8ff;
+      }
+      100% {
+        text-shadow: 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ffffff;
+      }
     }
 
-    #loginAdminForm label {
-      font-weight: 500;
-      color: #ccc;
-      margin-bottom: 10px;
-      display: block;
-    }
-
-    #loginAdminForm input {
-      font-size: 1rem;
-      padding: 12px;
-      border-radius: 8px;
-      width: 100%;
-      border: none;
-      margin-bottom: 14px;
-      background: #222;
-      color: #00f6ff;
-      box-shadow: inset 0 4px 6px rgba(0, 255, 255, 0.1);
-    }
-
-    #loginAdminForm input:focus {
-      background: #333;
-      outline: none;
-      box-shadow: 0 0 8px #00f6ff;
-    }
-
-    #loginError {
-      color: #ff4d4d;
-      font-size: 0.9rem;
-      margin-bottom: 15px;
-      display: none;
-    }
-
-    .logo-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
-
-    .logo-container img {
-      width: 120px;
-      filter: drop-shadow(0 0 10px rgba(0, 255, 255, 0.7));
-    }
-
-    .logo-reflect {
-      transform: scaleY(-1);
-      opacity: 0.25;
-      margin-top: -20px;
-      filter: blur(2px);
-    }
-
-    @media (max-width: 480px) {
-      h1 {
+    /* Responsividade para telas pequenas */
+    @media (max-width: 450px) {
+      .title {
         font-size: 2rem;
+        letter-spacing: 1px; /* Menos espaçamento nas letras */
+        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6); /* Ajustar sombra para telas pequenas */
       }
 
-      .btn-login {
-        font-size: 1rem;
-        padding: 10px 25px;
+      .loading {
+        font-size: 1.2rem;
+        color: #ddd; /* Cor mais suave para o texto de "loading" */
+      }
+      
+      /* Efeito suave de zoom para telas pequenas */
+      .container {
+        animation: zoomIn 2.5s ease-out forwards;
       }
 
-      #loginAdminForm {
-        padding: 1.5rem;
-        max-width: 280px;
+      @keyframes zoomIn {
+        0% {
+          transform: scale(0.8);
+        }
+        100% {
+          transform: scale(1);
+        }
       }
+    }
 
-      .logo-container img {
-        width: 90px;
-      }
-
-      .contato-topo {
-        font-size: 0.8rem;
-        padding: 4px 8px;
-      }
-
-      .contato-topo i {
-        font-size: 1rem;
+    /* Efeito de fade-in para telas maiores */
+    @media (min-width: 450px) {
+      .title {
+        font-size: 3rem;
+        text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6); /* Sombra mais intensa */
       }
     }
   </style>
 </head>
 <body>
-  <!-- WhatsApp Topo Esquerdo -->
-  <div class="contato-topo">
-  <a href="https://wa.me/5598985761913?text=Ol%C3%A1!%20O%20motivo%20da%20mensagem%20%C3%A9%20sobre%20o%20sistema%20de%20revezamento%2C%20sugest%C3%B5es%20ou%20melhorias." target="_blank" style="display: flex; align-items: center; text-decoration: none;">
-    <i class="fab fa-whatsapp"></i>
-    <span>Sugestões ou melhorias? Envie uma mensagem!</span>
-  </a>
-</div>
 
-
-  <div>
-    <div class="logo-container">
-      <img src="vale-removebg-preview.png" alt="Logo Vale" />
-      <img src="vale-removebg-preview.png" class="logo-reflect" alt="Reflexo Logo" />
-    </div>
-
-    <h1>Revezamento Turma B</h1>
-
-    <div class="alert alert-info text-start shadow mt-3" style="max-width: 500px; margin: 0 auto; border-left: 5px solid #00f6ff; background-color: rgba(0, 255, 255, 0.05); color: #ccf;">
-      <strong>📢 Aviso importante:</strong><br>
-      A partir do dia <strong>11/08/2025</strong>, o acesso ao sistema será feito por <strong>senha única</strong>, sendo uma para <strong>a equipe</strong> e outra para <strong>administradores</strong>.<br>
-      Agradecemos a compreensão e colaboração de todos. 🙏
-    </div>
-
-    <div class="d-flex justify-content-center flex-wrap">
-      <button id="btnAdm" class="btn btn-login btn-danger" disabled>ADM</button>
-      <button id="btnUser" class="btn btn-login btn-outline-info">Equipe</button>
-    </div>
-
-    <button id="btnLogout" class="btn btn-login btn-outline-danger" style="display:none;">Logout</button>
-
-    <form id="loginAdminForm" class="mt-3" autocomplete="off" style="display: none;">
-      <div class="mb-3">
-        <label for="senha" class="form-label">Senha ADM</label>
-        <input type="password" id="senha" class="form-control" placeholder="Digite a senha" required />
-      </div>
-      <div id="loginError" class="text-danger mb-2"></div>
-      <button type="submit" class="btn btn-primary w-100">Login</button>
-    </form>
+  <div class="container">
+    <div class="title"><span>Revezamento turma B</span></div>
+    <div class="loading"></div>
   </div>
 
   <script>
-    const btnAdm = document.getElementById('btnAdm');
-    const btnUser = document.getElementById('btnUser');
-    const btnLogout = document.getElementById('btnLogout');
-    const loginAdminForm = document.getElementById('loginAdminForm');
-    const loginError = document.getElementById('loginError');
-    const senhaInput = document.getElementById('senha');
-
-    async function checkAdmin() {
-      try {
-        const res = await fetch('/checkAdmin', { credentials: 'include' });
-        const data = await res.json();
-        if (data.isAdmin || data.isEquipe) {
-          btnAdm.style.display = 'none';
-          btnUser.style.display = 'none';
-          btnLogout.style.display = 'inline-block';
-        } else {
-          btnAdm.style.display = 'inline-block';
-          btnUser.style.display = 'inline-block';
-          btnLogout.style.display = 'none';
-        }
-      } catch {
-        btnAdm.style.display = 'inline-block';
-        btnUser.style.display = 'inline-block';
-        btnLogout.style.display = 'none';
-      }
-    }
-
-    checkAdmin();
-
-    btnUser.addEventListener('click', async () => {
-      try {
-        const res = await fetch('/login', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',
-          body: JSON.stringify({ senha: 'Min@Vale', tipo: 'equipe' })
-        });
-
-        if (!res.ok) {
-          const data = await res.json();
-          alert(data.erro || 'Erro no login da equipe');
-          return;
-        }
-
-        btnAdm.style.display = 'none';
-        btnUser.style.display = 'none';
-        btnLogout.style.display = 'inline-block';
-        window.location.href = 'app.html?equipe=1';
-      } catch (error) {
-        alert('Erro de comunicação com o servidor');
-      }
-    });
-
-    btnLogout.addEventListener('click', async () => {
-      try {
-        await fetch('/logout', { method: 'POST', credentials: 'include' });
-      } catch {}
-      location.reload();
-    });
+    // Função para redirecionar para o app.html após a animação
+    setTimeout(function() {
+      window.location.href = '/app.html';
+    }, 6000); // 6 segundos para esperar a animação acabar
   </script>
+
 </body>
 </html>
