--- a/public/app.html
+++ b/public/app.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Revezamento Turma B</title>
-  <link rel="icon" type="image/png" href="image/turmaB.jpeg">
+  <link rel="icon" type="image/png" href="image/vale.png">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,7 +14,7 @@
       text-align: center;
       font-size: 0.9rem;
       color: #555;
-      margin-top: -0.3rem;
+      margin-top: 10px;
       margin-bottom: 1rem;
       font-weight: 500;
     }
@@ -61,41 +61,393 @@
       outline: none;
       box-shadow: none;
     }
+    /* Estilização do menu adicionar */
+.menu-adicionar {
+  position: fixed;
+  top: 60px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.btn-adicionar {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 20px;
+  font-size: 0.95rem;
+  cursor: pointer;
+  font-weight: 600;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  transition: background 0.3s ease;
+}
+
+.btn-adicionar:hover {
+  background-color: #0056b3;
+}
+
+/* Painel do formulário */
+.form-container {
+  display: none;
+  margin-top: 10px;
+  background: #f8f9fa;
+  padding: 16px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.08);
+  width: 260px;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.form-container input,
+.form-container select {
+  padding: 8px;
+  font-size: 0.9rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-container button {
+  padding: 8px;
+  font-size: 0.9rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.botoes-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-container button[type="submit"] {
+  background-color: #007E7A;
+  color: white;
+}
+
+.form-container .resetar {
+  background-color: #dc3545;
+  color: white;
+}
+/* Menu principal */
+.menu-wrapper {
+  position: relative;
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.btn-menu {
+  background-color: #007E7A;
+  position: relative;
+  margin-top: -18px;
+  color: white;
+  border: none;
+  top: 0;
+  padding: 6px 12px;
+  font-size: 1rem;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.btn-menu:hover {
+  background-color: #01524f;
+}
+
+
+.menu-dropdown {
+  display: none;
+  position: absolute;
+  top: 118%;
+  left: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  min-width: 200px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  z-index: 1000;
+  border-radius: 6px;
+}
+
+.menu-dropdown a,
+.menu-dropdown .menu-item {
+  display: block;
+  padding: 10px 15px;
+  color: #333;
+  text-decoration: none;
+  transition: background-color 0.2s ease;
+  font-weight: 500;
+}
+
+.menu-dropdown a:hover,
+.menu-dropdown .menu-item:hover {
+  background-color: #f0f0f0;
+  color: #000;
+}
+
+.menu-dropdown .text-danger {
+  color: #dc3545;
+}
+
+
+/* Formulário */
+.form-wrapper {
+  display: none;
+  margin-bottom: 16px;
+  padding: 16px;
+  background-color: #f8f9fa;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  max-width: 320px;
+}
+
+.form-wrapper form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.form-wrapper input,
+.form-wrapper select {
+  padding: 8px;
+  font-size: 0.95rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.botoes-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-wrapper button[type="submit"] {
+  background-color: #007E7A;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-wrapper .resetar {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.btn-outline-primary, .btn-outline-danger {
+  border-width: 1.5px;
+  font-weight: 500;
+  background-color: transparent;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.btn-outline-primary:hover {
+  background-color: rgba(0, 123, 255, 0.05);
+}
+
+.btn-outline-danger:hover {
+  background-color: rgba(220, 53, 69, 0.05);
+}
+.titulo-app {
+  font-size: clamp(1.2rem, 4vw, 1.8rem);
+  font-weight: 700;
+  font-family: 'Segoe UI', sans-serif;
+  line-height: 1.2;
+  margin-bottom: 0.4rem;
+}
+
+/* Contador de equipes */
+.quantidade-equipes {
+  font-size: 0.95rem;
+  color: #555;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+@media (max-width: 550px) {
+  h1{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap:15px;
+}
+.logo{
+  max-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+  .btn-menu {
+  background-color: #007E7A;
+  position: relative;
+  margin-top: -18px;
+  color: white;
+  border: none;
+  top: 0;
+  padding: 3px 7px;
+  font-size: 1rem;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.btn-menu:hover {
+  background-color: #00514f;
+}
+}
+.titulo-app {
+  color: #007E7A !important;
+}
+
+h1{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap:15px;
+}
+.logo{
+  max-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.d-flex  {
+  display: flex;
+  margin-top: -45px;
+  flex-direction: column;
+
+}
+.btn-outline-primary {
+  background-color: #007E7A !important;
+  color: white !important;
+  border-color: #007E7A !important;
+}
+
+.btn-outline-primary:hover {
+  background-color: #00514f !important;
+  border-color: #00514f !important;
+  color: white !important;
+}
+.btn-outline-danger {
+   background-color:   #C0305E !important;
+   color: white !important;
+   border-color:   #C0305E !important;
+}
+.btn-outline-danger:hover {
+   background-color:   #8a0e35 !important;
+   color: white !important;
+   border-color:   #8a0e35 !important;
+}
+
+.data-header{
+  top: 40px;
+  font: 13px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.form-select {
+  color: #C0305E;
+  font-weight: bolder;
+}
+
+.local-display {
+  color: #007E7A;
+  font-weight: bolder;
+  text-decoration: none;
+}
+@media (min-width: 439px) and (max-width: 560px) {
+  .table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  table.table {
+    width: 100%;
+    table-layout: fixed;
+  }
+
+  table.table th,
+  table.table td {
+    word-wrap: break-word;
+    font-size: 0.8rem;
+    padding: 0.4rem;
+  }
+
+  .table th:nth-child(2),
+  .table td:nth-child(2) {
+    min-width: 100px; /* Nome */
+  }
+
+  .table th:nth-child(6),
+  .table td:nth-child(6) {
+    min-width: 120px; /* Ações */
+  }
+}
+
+
+
 
   </style>
 </head>
 
 <body class="container py-4">
-  <div id="dataAtual" style="text-align:center; font-weight:400; margin-bottom: 4px; font-size: 0.85rem; color: #444; padding-top: 4px;"></div>
+   <div class="menu-wrapper">
+  <button id="btnMenu" class="btn-menu">☰ Menu</button>
+  <div id="menuDropdown" class="menu-dropdown">
+    <a href="#" id="abrirFormBtn" class="menu-item">➕ Adicionar Pessoa</a>
+    <a href="local.html" class="menu-item">📌 Ir para Local</a>
+    <a href="dashboard.html" class="menu-item">📊 Ir para Dashboard</a>
+    <a href="#" onclick="limparDados()" class="menu-item text-danger">🗑️ Resetar</a>
+    
+  </div>
+</div>
 
-  <script>
-    function formatarDataAtual() {
-      const opcoes = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
-      const hoje = new Date();
-      const dataFormatada = hoje.toLocaleDateString('pt-BR', opcoes);
-      document.getElementById('dataAtual').textContent = dataFormatada.charAt(0).toUpperCase() + dataFormatada.slice(1);
-    }
-    formatarDataAtual();
-  </script>
+
+  
 
   <!-- Botão para acessar o Dashboard -->
-  <a href="dashboard.html" class="btn btn-outline-primary btn-sm" id="dashboardBtn">Dashboard</a>
+ <header class="cabecalho-app shadow-sm rounded mb-4 px-3 py-3">
+  <div class="d-flex flex-column ">
+      <div id="dataAtual" class="data-header mb-1"></div>
+    <h1 class="titulo-app m-0 text-primary" style="color: #007E7A;"> <img src="image/vale.png" alt="logo da vale" class="logo">  Revezamento Turma B</h1>
+    <p class="quantidade-equipes m-0" >Quantidade de equipes: <span id="contadorPessoas">0</span></p>    
+   
+  </div>
+</header>
 
-  <h1 class="fw-bold logo">🚂 Revezamento Turma B</h1>
-  <p class="quantidade-equipes">Quantidade de equipes: <span id="contadorPessoas">0</span></p>
+ 
+<!-- Menu principal -->
 
-  <form id="formPessoa" class="mb-4">
-    <input type="text" name="nome" class="form-control" placeholder="Nome" required autocomplete="off" />
-    <select name="local" id="local" class="form-select" required>
+
+<!-- Formulário oculto inicialmente -->
+<div id="formPessoaWrapper" class="form-wrapper">
+  <form id="formPessoa">
+    <input type="text" name="nome" placeholder="Nome" required autocomplete="off" />
+    <select name="local" required>
       <option value="" disabled selected>Selecione o local</option>
       <option value="X6">X6</option>
       <option value="X5">X5</option>
       <option value="PIAL/OFC">PIAL/OFC</option>
       <option value="VV">VV</option>
     </select>
-    <button class="btn btn-success" type="submit">Adicionar</button>
-    <button type="button" onclick="limparDados()" class="btn btn-outline-danger">Limpar</button>
+    <div class="botoes-form">
+      <button type="submit">Adicionar</button>
+      
+    </div>
   </form>
+</div>
 
   <div class="table-responsive">
     <table class="table table-bordered table-hover align-middle text-center">
@@ -114,6 +466,43 @@
   </div>
 
   <script>
+    // Abrir/fechar menu
+const btnMenu = document.getElementById('btnMenu');
+const menuDropdown = document.getElementById('menuDropdown');
+btnMenu.addEventListener('click', () => {
+  menuDropdown.style.display = menuDropdown.style.display === 'block' ? 'none' : 'block';
+});
+
+// Abrir formulário ao clicar em "Adicionar Pessoa"
+const abrirFormBtn = document.getElementById('abrirFormBtn');
+const formWrapper = document.getElementById('formPessoaWrapper');
+abrirFormBtn.addEventListener('click', (e) => {
+  e.preventDefault();
+  formWrapper.style.display = formWrapper.style.display === 'block' ? 'none' : 'block';
+  menuDropdown.style.display = 'none'; // fechar menu ao abrir formulário
+});
+
+// Fechar menu clicando fora
+document.addEventListener('click', function(e) {
+  if (!btnMenu.contains(e.target) && !menuDropdown.contains(e.target)) {
+    menuDropdown.style.display = 'none';
+  }
+});
+// Fechar formulário ao clicar fora dele
+document.addEventListener('click', function(e) {
+  const botaoAdicionar = document.getElementById('abrirFormBtn');
+  const formulario = document.getElementById('formPessoaWrapper');
+
+  const clicouFora = !formulario.contains(e.target) && !botaoAdicionar.contains(e.target);
+
+  if (formulario.style.display === 'block' && clicouFora) {
+    formulario.style.display = 'none';
+  }
+});
+
+
+
+
     let estaEditandoId = null;
     let estaEditandoMensagem = false;
 
@@ -145,8 +534,9 @@
                 <td id="inicio-${p.id}" class="hora-inicio" data-id="${p.id}">${formatarHora(p.hora_inicio)}</td>
                 <td id="fim-${p.id}">${formatarHora(p.hora_fim)}</td>
                 <td class="actions">
-                  <button class="btn btn-warning btn-sm" onclick="iniciar(${p.id})">Iniciar</button>
-                  <button class="btn btn-danger btn-sm" onclick="excluir(${p.id})">Excluir</button>
+                  <button class="btn btn-outline-primary btn-sm" onclick="iniciar(${p.id})">Iniciar</button>
+                  <button class="btn btn-outline-danger btn-sm" onclick="excluir(${p.id})">Excluir</button>
+
                 </td>
               `;
               tbody.appendChild(tr);
@@ -227,10 +617,13 @@
       estaEditandoId = id;
       const valorInput = horaAtual.length >= 5 ? horaAtual.slice(0,5) : '';
       const input = document.createElement('input');
-      input.type = 'time';
-      input.className = 'form-control form-control-sm';
-      input.value = valorInput;
-      input.style.maxWidth = '110px';
+     input.type = 'time';
+     input.className = 'form-control form-control-sm';
+     input.value = valorInput;
+     input.style.maxWidth = '110px';
+     input.pattern = '[0-9]{2}:[0-9]{2}';
+     input.inputMode = 'numeric';
+
       td.innerHTML = '';
       td.appendChild(input);
       input.focus();
@@ -323,7 +716,7 @@
     }
 
     function limparDados() {
-      if (confirm('Certeza que deseja limpar dados de todos os maquinistas?')) {
+      if (confirm('Tem certeza que deseja limpar os dados de todos os maquinistas?')) {
         fetch('/limpar', { method: 'POST' })
           .then(response => {
             if (response.ok) {
@@ -406,6 +799,18 @@
         document.body.appendChild(versionBadge);
       }).catch(() => {});
   </script>
+  
+<script>
+  function formatarDataAtual() {
+    const opcoes = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
+    const hoje = new Date();
+    const dataFormatada = hoje.toLocaleDateString('pt-BR', opcoes);
+    document.getElementById('dataAtual').textContent = dataFormatada.charAt(0).toUpperCase() + dataFormatada.slice(1);
+  }
+
+  // Espera o DOM carregar antes de chamar
+  window.addEventListener('DOMContentLoaded', formatarDataAtual);
+</script>
 
 </body>
 </html>
