--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,19 +7,21 @@
   <link rel="icon" type="image/png" href="image/turmaB.jpeg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body {
+body {
   font-family: 'Roboto', sans-serif;
   background: #f4f7fc;
   padding-top: 50px;
+  color: #333;
 }
 
 .dashboard-card {
   background: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 126, 122, 0.1);
   padding: 30px;
   margin-bottom: 20px;
   transition: transform 0.3s ease;
+  border-left: 6px solid #007E7A;
 }
 
 .dashboard-card:hover {
@@ -32,11 +34,12 @@
 }
 
 .status-pendente { color: #f44336; }
-.status-concluido { color: #4caf50; }
-.status-andamento { color: #ffeb3b; }
+.status-concluido { color: #007E7A; }
+.status-andamento { color: #C0305E; }
 
 .progress-bar {
   height: 20px;
+  border-radius: 20px;
 }
 
 .table th, .table td {
@@ -48,15 +51,16 @@
 }
 
 .table-hover tbody tr:hover {
-  background-color: #f9f9f9;
+  background-color: #f0f8f8;
 }
 
 .header {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #333;
+  color: #007E7A;
   text-align: center;
+  text-shadow: 1px 1px #c0f0ed;
 }
 
 .dashboard-header {
@@ -71,7 +75,7 @@
   font-size: 1.1rem;
   padding: 10px 20px;
   border-radius: 5px;
-  background-color: #4caf50;
+  background-color: #007E7A;
   color: #fff;
   border: none;
   text-decoration: none;
@@ -79,12 +83,13 @@
 }
 
 .btn-back:hover {
-  background-color: #45a049;
+  background-color: #005f5c;
 }
 
 .card-title {
   font-size: 1.5rem;
   margin-bottom: 15px;
+  color: #C0305E;
 }
 
 .card-body {
@@ -97,6 +102,7 @@
   overflow-x: auto;
 }
 
+/* Responsivo (pequenas melhorias visuais apenas) */
 @media (max-width: 768px) {
   .dashboard-card {
     padding: 20px;
@@ -126,9 +132,8 @@
     font-size: 1.3rem;
     padding: 10px 20px;
     border-radius: 5px;
-    background-color: #4caf50;
+    background-color: #007E7A;
     color: #fff;
-    border: none;
     text-decoration: none;
     transition: background-color 0.3s ease, transform 0.3s ease;
     display: inline-flex;
@@ -137,54 +142,53 @@
   }
 
   .btn-back:hover {
-    background-color: #45a049;
+    background-color: #005f5c;
     transform: scale(1.1);
   }
+}
 
-  @media (max-width: 450px) {
-    .btn-back {
-      font-size: 1.1rem;
-      width: 45px;
-      height: 45px;
-      border-radius: 50%;
-      padding: 0;
-      text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .btn-back::before {
-      content: "←";
-      color: white;
-      font-size: 1.6rem;
-    }
-
-    .btn-back span {
-      display: none;
-    }
+/* Botão arredondado com seta (mobile) */
+@media (max-width: 450px) {
+  .btn-back {
+    font-size: 1.1rem;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    padding: 0;
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
   }
 
-  @media (min-width: 450px) {
-    .btn-back {
-      font-size: 1.2rem;
-      padding: 12px 24px;
-      border-radius: 5px;
-    }
+  .btn-back::before {
+    content: "←";
+    color: white;
+    font-size: 1.6rem;
+  }
 
-    .btn-back::before {
-      content: "←";
-      color: white;
-      font-size: 1.4rem;
-    }
-
-    .btn-back span {
-      display: inline-block;
-      margin-left: 8px;
-    }
+  .btn-back span {
+    display: none;
   }
 }
+
+@media (min-width: 450px) {
+  .btn-back {
+    font-size: 1.2rem;
+    padding: 12px 24px;
+    border-radius: 5px;
+  }
+
+  .btn-back::before {
+    content: "←";
+    color: white;
+    font-size: 1.4rem;
+  }
+
+  .btn-back span {
+    display: inline-block;
+    margin-left: 8px;
+  }
+}
+
 
   </style>
 </head>
@@ -214,7 +218,7 @@
       <!-- Em Andamento -->
       <div class="col-md-4">
         <div class="dashboard-card">
-          <p class="card-title">Em Andamento</p>
+          <p class="card-title">Andamento</p>
           <div class="card-body">
             <span class="status status-andamento">🟡 <span id="andamento">0</span></span>
             <div class="progress w-50">
