--- a/public/app.html
+++ b/public/app.html
@@ -101,6 +101,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  
 }
 
 .form-container input,
@@ -112,11 +113,11 @@
 }
 
 .form-container button {
-  padding: 8px;
-  font-size: 0.9rem;
+  padding: 7px;
+  font-size: 0.8rem;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
+  cursor: pointer; 
 }
 
 .botoes-form {
@@ -367,7 +368,7 @@ h1{
   font-weight: bolder;
   text-decoration: none;
 }
-@media (min-width: 439px) and (max-width: 560px) {
+@media (min-width: 437px) and (max-width: 574px) {
   .table-responsive {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -376,27 +377,100 @@ h1{
   table.table {
     width: 100%;
     table-layout: fixed;
+    font-size: 0.68rem;
   }
 
   table.table th,
   table.table td {
-    word-wrap: break-word;
-    font-size: 0.8rem;
-    padding: 0.4rem;
+    padding: 0.25rem;
+    word-break: break-word;
+    vertical-align: middle;
   }
 
   .table th:nth-child(2),
-  .table td:nth-child(2) {
-    min-width: 100px; /* Nome */
-  }
-
+  .table td:nth-child(2),
+  .table th:nth-child(3),
+  .table td:nth-child(3),
+  .table th:nth-child(4),
+  .table td:nth-child(4),
+  .table th:nth-child(5),
+  .table td:nth-child(5),
   .table th:nth-child(6),
   .table td:nth-child(6) {
-    min-width: 120px; /* Ações */
+    min-width: 70px;
+  }
+
+  /* Redução dos botões de ação */
+td.actions {
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 4px;
+    padding: 0.25rem !important;
+  }
+
+  td.actions .btn {
+    font-size: 0.6rem !important;
+    padding: 4px 6px !important;
+    line-height: 1.1 !important;
+    width: 100% !important;
+    min-width: unset !important;
+    white-space: normal !important;
+  }
+
+
+}
+@media (min-width: 225px) and (max-width: 352px) {
+  /* Reduz o tamanho geral da tabela */
+  .table {
+    font-size: 0.6rem;
+    table-layout: fixed;
+  }
+
+  .table th,
+  .table td {
+    padding: 0.2rem !important;
+    word-wrap: break-word;
+    white-space: normal;
+  }
+
+  /* Reduz largura da coluna de ações */
+  .table th:nth-child(6),
+  .table td:nth-child(6) {
+    width: 80px !important;
+    max-width: 90px !important;
+  }
+
+  /* Estiliza os botões para ficarem menores e empilhados */
+  td.actions {
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 4px;
+    padding: 0.2rem !important;
+  }
+
+  td.actions .btn {
+    font-size: 0.55rem !important;
+    padding: 3px 5px !important;
+    line-height: 1 !important;
+    width: 100% !important;
+    min-width: unset !important;
+    white-space: normal !important;
+  }
+
+  /* Ajuste em campos de texto longos (como nomes) */
+  .table td:nth-child(2),
+  .table td:nth-child(3) {
+    max-width: 100px;
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
+
+  /* Força layout responsivo horizontal se necessário */
+  .table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
-
-
 
 
   </style>
@@ -661,7 +735,34 @@ document.addEventListener('click', function(e) {
         carregarPessoas();
       }
 
-      input.onblur = () => salvar();
+let mudouValor = false;
+
+input.onchange = () => {
+  mudouValor = true;
+};
+
+input.onblur = () => {
+  setTimeout(() => {
+    if (mudouValor) {
+      salvar();
+    } else {
+      cancelar(); // Se não mudou nada, cancela
+    }
+  }, 200); // espera breve para evitar conflitos com toque
+};
+
+input.onkeydown = (e) => {
+  if(e.key === 'Enter') {
+    e.preventDefault();
+    salvar();
+  }
+  if(e.key === 'Escape') {
+    e.preventDefault();
+    cancelar();
+  }
+};
+
+
       input.onkeydown = (e) => {
         if(e.key === 'Enter') {
           e.preventDefault();
