--- a/public/app.html
+++ b/public/app.html
@@ -540,6 +540,16 @@ td.actions {
   </div>
 
   <script>
+    function detectarSO() {
+  const ua = navigator.userAgent || navigator.vendor || window.opera;
+  if (/android/i.test(ua)) return 'Android';
+  if (/iPad|iPhone|iPod/.test(ua) && !window.MSStream) return 'iPhone';
+  if (/Win/i.test(ua)) return 'PC Windows';
+  if (/Mac/i.test(ua)) return 'PC Mac';
+  if (/Linux/i.test(ua)) return 'PC Linux';
+  return 'Outro';
+}
+
     // Abrir/fechar menu
 const btnMenu = document.getElementById('btnMenu');
 const menuDropdown = document.getElementById('menuDropdown');
@@ -688,92 +698,120 @@ document.addEventListener('click', function(e) {
     }
 
     function editarHoraInicio(td, id, horaAtual) {
-      estaEditandoId = id;
-      const valorInput = horaAtual.length >= 5 ? horaAtual.slice(0,5) : '';
-      const input = document.createElement('input');
-     input.type = 'time';
-     input.className = 'form-control form-control-sm';
-     input.value = valorInput;
-     input.style.maxWidth = '110px';
-     input.pattern = '[0-9]{2}:[0-9]{2}';
-     input.inputMode = 'numeric';
+  estaEditandoId = id;
+  const valorInput = horaAtual.length >= 5 ? horaAtual.slice(0, 5) : '';
+  const sistema = detectarSO();
 
-      td.innerHTML = '';
-      td.appendChild(input);
-      input.focus();
+  let input;
 
-      function salvar() {
-        if (!input.value) return cancelar();
-        const [h, m] = input.value.split(':');
-        if(h === undefined || m === undefined) return cancelar();
+  if (sistema === 'Android') {
+    // Criar input tipo text com máscara simples para HH:MM
+    input = document.createElement('input');
+    input.type = 'text';
+    input.className = 'form-control form-control-sm';
+    input.value = valorInput;
+    input.style.maxWidth = '110px';
+    input.placeholder = 'HH:MM';
+    input.maxLength = 5;
 
-        const dtInicio = new Date();
-        dtInicio.setHours(parseInt(h), parseInt(m), 0, 0);
-        const dtFim = new Date(dtInicio.getTime() + 75*60000);
-        const hhFim = dtFim.getHours().toString().padStart(2,'0');
-        const mmFim = dtFim.getMinutes().toString().padStart(2,'0');
-        const ssFim = '00';
-
-        const hora_inicio = `${input.value}:00`;
-        const hora_fim = `${hhFim}:${mmFim}:${ssFim}`;
-
-        fetch('/editarHorario', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({ id, hora_inicio, hora_fim })
-        }).then(() => {
-          estaEditandoId = null;
-          carregarPessoas();
-        }).catch(() => {
-          estaEditandoId = null;
-          carregarPessoas();
-        });
+    // Máscara simples manual (sem biblioteca)
+    input.addEventListener('input', function(e) {
+      let val = input.value.replace(/\D/g, ''); // só números
+      if (val.length > 2) {
+        val = val.slice(0, 2) + ':' + val.slice(2, 4);
       }
+      input.value = val;
+    });
 
-      function cancelar() {
+  } else {
+    // Outros sistemas usam input time padrão
+    input = document.createElement('input');
+    input.type = 'time';
+    input.className = 'form-control form-control-sm';
+    input.value = valorInput;
+    input.style.maxWidth = '110px';
+    input.pattern = '[0-9]{2}:[0-9]{2}';
+    input.inputMode = 'numeric';
+  }
+
+  td.innerHTML = '';
+  td.appendChild(input);
+  input.focus();
+
+  function salvar() {
+    if (!input.value) return cancelar();
+    const valor = input.value;
+
+    let h, m;
+    if (sistema === 'Android') {
+      // validar formato HH:MM simples
+      if (!/^\d{2}:\d{2}$/.test(valor)) return cancelar();
+      [h, m] = valor.split(':');
+    } else {
+      [h, m] = valor.split(':');
+    }
+
+    if (h === undefined || m === undefined) return cancelar();
+
+    const dtInicio = new Date();
+    dtInicio.setHours(parseInt(h), parseInt(m), 0, 0);
+    const dtFim = new Date(dtInicio.getTime() + 75 * 60000);
+    const hhFim = dtFim.getHours().toString().padStart(2, '0');
+    const mmFim = dtFim.getMinutes().toString().padStart(2, '0');
+    const ssFim = '00';
+
+    const hora_inicio = `${h.padStart(2, '0')}:${m.padStart(2, '0')}:00`;
+    const hora_fim = `${hhFim}:${mmFim}:${ssFim}`;
+
+    fetch('/editarHorario', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ id, hora_inicio, hora_fim }),
+    })
+      .then(() => {
         estaEditandoId = null;
         carregarPessoas();
+      })
+      .catch(() => {
+        estaEditandoId = null;
+        carregarPessoas();
+      });
+  }
+
+  function cancelar() {
+    estaEditandoId = null;
+    carregarPessoas();
+  }
+
+  let mudouValor = false;
+
+  input.onchange = () => {
+    mudouValor = true;
+  };
+
+  input.onblur = () => {
+    setTimeout(() => {
+      if (mudouValor) {
+        salvar();
+      } else {
+        cancelar();
       }
+    }, 200);
+  };
 
-let mudouValor = false;
-
-input.onchange = () => {
-  mudouValor = true;
-};
-
-input.onblur = () => {
-  setTimeout(() => {
-    if (mudouValor) {
+  input.onkeydown = (e) => {
+    if (e.key === 'Enter') {
+      e.preventDefault();
       salvar();
-    } else {
-      cancelar(); // Se não mudou nada, cancela
     }
-  }, 200); // espera breve para evitar conflitos com toque
-};
-
-input.onkeydown = (e) => {
-  if(e.key === 'Enter') {
-    e.preventDefault();
-    salvar();
-  }
-  if(e.key === 'Escape') {
-    e.preventDefault();
-    cancelar();
-  }
-};
-
-
-      input.onkeydown = (e) => {
-        if(e.key === 'Enter') {
-          e.preventDefault();
-          salvar();
-        }
-        if(e.key === 'Escape') {
-          e.preventDefault();
-          cancelar();
-        }
-      };
+    if (e.key === 'Escape') {
+      e.preventDefault();
+      cancelar();
     }
+  };
+}
+
+    
 
    document.getElementById('formPessoa').addEventListener('submit', e => {
   e.preventDefault();
@@ -875,30 +913,63 @@ input.onkeydown = (e) => {
 
     carregarPessoas();
   </script>
+<script>
+fetch('/api/version')
+  .then(res => res.ok ? res.json() : Promise.reject())
+  .then(data => {
+    const versionBadge = document.createElement('div');
+    versionBadge.textContent = `v${data.version}`;
+    Object.assign(versionBadge.style, {
+      position: 'fixed',
+      top: '6px',
+      right: '10px',
+      backgroundColor: '#888',
+      color: '#fff',
+      padding: '2px 6px',
+      fontSize: '12px',
+      borderRadius: '4px',
+      fontFamily: 'Arial, sans-serif',
+      zIndex: 9999,
+      opacity: '0.7',
+      cursor: 'default',
+      userSelect: 'none'
+    });
+    document.body.appendChild(versionBadge);
+  }).catch(() => {});
+</script>
 
   <script>
-    fetch('/api/version')
-      .then(res => res.ok ? res.json() : Promise.reject())
-      .then(data => {
-        const versionBadge = document.createElement('div');
-        versionBadge.textContent = `v${data.version}`;
-        Object.assign(versionBadge.style, {
-          position: 'fixed',
-          top: '6px',
-          right: '10px',
-          backgroundColor: '#888',
-          color: '#fff',
-          padding: '2px 6px',
-          fontSize: '12px',
-          borderRadius: '4px',
-          fontFamily: 'Arial, sans-serif',
-          zIndex: 9999,
-          opacity: '0.7',
-          cursor: 'default',
-          userSelect: 'none'
-        });
-        document.body.appendChild(versionBadge);
-      }).catch(() => {});
+   
+
+      function detectarSO() {
+  const ua = navigator.userAgent || navigator.vendor || window.opera;
+
+  if (/android/i.test(ua)) {
+    return 'Android';
+  }
+
+  if (/iPad|iPhone|iPod/.test(ua) && !window.MSStream) {
+    return 'iPhone';
+  }
+
+  // Aqui podemos verificar se é PC (Windows, Mac, Linux)
+  if (/Win/i.test(ua)) {
+    return 'PC Windows';
+  }
+  if (/Mac/i.test(ua)) {
+    return 'PC Mac';
+  }
+  if (/Linux/i.test(ua)) {
+    return 'PC Linux';
+  }
+
+  return 'Outro';
+}
+
+// Exemplo de uso:
+const sistema = detectarSO();
+console.log('Sistema detectado:', sistema);
+
   </script>
   
 <script>
