--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 <body>
   <div class="container" role="main" aria-label="Tela de apresentação do sistema Revezamento Turma B">
     <h1>Revezamento Turma B</h1>
-    <p class="subtitle">Seu sistema de gestão ágil e moderno</p>
+    <p class="subtitle"></p>
     <div class="loader" aria-hidden="true"></div>
   </div>
 
