--- a/public/app.html
+++ b/public/app.html
@@ -8,6 +8,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <style>
     .quantidade-equipes {
@@ -22,10 +23,16 @@
       color: #aaa;
       font-size: 0.85em;
     }
-    td.hora-inicio {
-      cursor: pointer;
-      user-select: none;
-    }
+    td.hora-inicio,
+td.hora-fim {
+  color: #555;
+  font-weight: 500;
+  font-size: 0.72rem;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+}
+
     .mensagem-display {
       font-style: italic;
       color: #004085;
@@ -472,7 +479,6 @@ td.actions {
   }
 }
 
-
   </style>
 </head>
 
@@ -481,9 +487,10 @@ td.actions {
   <button id="btnMenu" class="btn-menu">☰ Menu</button>
   <div id="menuDropdown" class="menu-dropdown">
     <a href="#" id="abrirFormBtn" class="menu-item">➕ Adicionar Pessoa</a>
-    <a href="local.html" class="menu-item">📌 Ir para Local</a>
-    <a href="dashboard.html" class="menu-item">📊 Ir para Dashboard</a>
-    <a href="#" onclick="limparDados()" class="menu-item text-danger">🗑️ Resetar</a>
+    <a href="local.html" class="menu-item">📌  Local</a>
+    <a href="dashboard.html" class="menu-item">📊  Tabela</a>
+    <a href="chat.html" class="menu-item">💬 Ir para Chat</a>
+    <a href="#" onclick="limparDados()" class="menu-item text-danger">🗑️  Resetar</a>
     
   </div>
 </div>
@@ -495,7 +502,7 @@ td.actions {
  <header class="cabecalho-app shadow-sm rounded mb-4 px-3 py-3">
   <div class="d-flex flex-column ">
       <div id="dataAtual" class="data-header mb-1"></div>
-    <h1 class="titulo-app m-0 text-primary" style="color: #007E7A;"> <img src="image/vale.png" alt="logo da vale" class="logo">  Revezamento Turma B</h1>
+    <h1 class="titulo-app m-0 text-primary" style="color: #007E7A; margin-left: 5px;"> <img src="image/vale.png" alt="logo da vale" class="logo">  Revezamento Turma B</h1>
     <p class="quantidade-equipes m-0" >Quantidade de equipes: <span id="contadorPessoas">0</span></p>    
    
   </div>
@@ -513,7 +520,9 @@ td.actions {
       <option value="" disabled selected>Selecione o local</option>
       <option value="X6">X6</option>
       <option value="X5">X5</option>
-      <option value="PIAL/OFC">PIAL/OFC</option>
+      <option value="Ctr">Ctr</option>
+      <option value="Comp">Composição</option>
+      <option value="PIAL/OFC">Pial/Ofc</option>
       <option value="VV">VV</option>
     </select>
     <div class="botoes-form">
@@ -600,7 +609,7 @@ document.addEventListener('click', function(e) {
           const tbody = document.getElementById('tabelaCorpo');
           tbody.innerHTML = '';
           document.getElementById('contadorPessoas').textContent = data.length;
-
+    
           function formatarHora(hora) {
             if (!hora) return '-';
             return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span class='segundos'>$2</span>");
@@ -611,12 +620,12 @@ document.addEventListener('click', function(e) {
               const tr = document.createElement('tr');
               tr.innerHTML = `
                 <td class="status">${p.status}</td>
-                <td>${p.nome}</td>
+                <td class="nome-pessoa">${p.nome}</td>
                 <td class="${p.local === 'PIAL/OFC' ? 'local-pial-ofc' : ''}">
                   <span class="local-display" onclick="editarLocal(this, ${p.id})">${p.local}</span>
                 </td>
                 <td id="inicio-${p.id}" class="hora-inicio" data-id="${p.id}">${formatarHora(p.hora_inicio)}</td>
-                <td id="fim-${p.id}">${formatarHora(p.hora_fim)}</td>
+                <td id="fim-${p.id}"class="hora-fim">${formatarHora(p.hora_fim)}</td>
                 <td class="actions">
                   <button class="btn btn-outline-primary btn-sm" onclick="iniciar(${p.id})">Iniciar</button>
                   <button class="btn btn-outline-danger btn-sm" onclick="excluir(${p.id})">Excluir</button>
@@ -868,7 +877,7 @@ document.addEventListener('click', function(e) {
     }
 
     function editarLocal(span, id) {
-      const locais = ["X6", "X5", "PIAL/OFC", "VV"];
+      const locais = ["X6", "X5", "CTR", "PIAL/OFC","VV","Comp",];
       const currentLocal = span.textContent;
       const select = document.createElement('select');
       select.className = 'form-select form-select-sm';
