--- a/public/local.html
+++ b/public/local.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
+body {
+  
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+
     .card-local {
       margin-bottom: 1.5rem;
       border-left: 6px solid #007E7A;
@@ -20,7 +28,13 @@
       font-weight: bold;
       color: #007E7A;
     }
-
+    .card-header {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      font-size: 0.80rem;
+    }
+  
     .pessoa-item {
       display: flex;
       justify-content: space-between;
@@ -75,6 +89,10 @@
       background: #007bff30;
       color: white;
     }
+    .hora {
+      display: flex;
+      flex-direction: row;
+    }
 
     @media (max-width: 600px) {
       .pessoa-item {
@@ -93,38 +111,138 @@
     grid-template-columns: repeat(2, 1fr); /* 2 colunas em telas médias para cima */
   }
 }
-.aviso-desenvolvimento {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: #ffc107;
-  color: #000;
-  font-weight: bold;
-  padding: 6px 10px;
-  font-size: 0.9rem;
-  z-index: 2000;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
 body {
   padding-top: 40px; /* espaço para o aviso não cobrir o conteúdo */
 }
+.btn-custom-voltar {
+  background-color: #007E7A;
+  color: #fff;
+  border: none;
+  padding: 4px 14px;
+  font-size: 0.95rem;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+  display: flex !important;
+  max-width: 80% !important; /* não deixa a largura passar do container */
+  box-sizing: border-box !important;
+  margin-right: 95%;
+}
+
+  @media (max-width: 600px) {
+      .btn-custom-voltar {
+      background-color: #007E7A;
+  padding: 4px 14px;
+  font-size: 0.95rem;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  display: flex !important;
+  max-width: 80% !important; /* não deixa a largura passar do container */
+  box-sizing: border-box !important;
+  margin-right: 83%;
+  margin-top: -3px;
+}
+    }
+.btn-custom-voltar:hover {
+  background-color: #005f5c;
+  color: #fff;
+}
+.cabecalho-app {
+  background-color: #e6f2f2; /* cor suave próximo ao verde petróleo */
+  padding: 0.6rem 1rem;      /* menos espaçamento vertical */
+  border-bottom: 3px solid #007E7A; /* linha que delimita o header */
+  box-shadow: 0 2px 5px rgba(0, 126, 122, 0.1); /* sombra sutil */
+  margin-bottom: 1.5rem; /* espaço para separar do conteúdo */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.2rem;
+  margin-top: -36px;
+}
+
+.cabecalho-app .data-header {
+  margin-top: -08px !important;
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: #004d4b;
+  text-transform: capitalize;
+  display: flex;
+}
+  @media (max-width: 450px) {
+    .cabecalho-app .data-header {
+  margin-top: 0 !important;
+  font-weight: 600;
+  font-size: 0.90rem;
+  color: #004d4b;
+  text-transform: capitalize;
+  display: flex;
+    }
+    .cabecalho-app {
+  background-color: #e6f2f2; /* cor suave próximo ao verde petróleo */
+  padding: 0.4rem 0.80rem;      /* menos espaçamento vertical */
+  border-bottom: 3px solid #007E7A; /* linha que delimita o header */
+  box-shadow: 0 2px 5px rgba(0, 126, 122, 0.1); /* sombra sutil */
+  margin-bottom: 0.80rem; /* espaço para separar do conteúdo */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.2rem;
+  margin-top: -36px;
+  border-radius: 2px;
+}
+.titulo-app {
+
+  font-weight: 700;
+  color: #007E7A;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px !important;
+  gap: 1px;
+  margin: 0;
+}
+  }
+
+
+.titulo-app {
+
+  font-weight: 700;
+  color: #007E7A;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px !important;
+  gap: 5px;
+  margin: 0;
+}
+@media (max-width: 415px) {
+  .card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    font-size: 0.95rem;
+  }
+
+  .card-local .card-header .quantidade {
+    font-size: 0.85rem;
+  }
+}
+
+
 
   </style>
 </head>
 
-<body class="container py-4">
-  <div class="aviso-desenvolvimento text-center">
-  🚧 Esta página está em desenvolvimento. Algumas funcionalidades podem não funcionar como esperado.
-</div>
-
-
-  <button class="btn-voltar" onclick="window.location.href='app.html'">← Voltar</button>
+  
 
   <header class="cabecalho-app text-center mb-4">
+    
+  <a href="app.html" class="btn btn-custom-voltar">Voltar</a>
+
     <div class="data-header" id="dataAtual"></div>
     <h1 class="titulo-app d-flex justify-content-center align-items-center">
-      <img src="image/vale.png" alt="Logo" class="logo" /> Revezamento Turma B - Locais
+      <img src="image/vale.png" alt="Logo" class="logo" />Turma B - Locais
     </h1>
   </header>
 
@@ -132,57 +250,88 @@ body {
 
   <script>
     function formatarHora(hora) {
-      if (!hora) return '-';
-      return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span style='color: #aaa; font-size: 0.8em'>$2</span>");
-    }
+  if (!hora) return '-';
+  return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span style='display: none;'>$2</span>");
+}
+
 
     function carregarLocais() {
-      fetch('/pessoas')
-        .then(res => res.json())
-        .then(pessoas => {
-          const locais = ['X6', 'X5', 'PIAL/OFC', 'VV'];
-          const container = document.getElementById('locaisContainer');
-          container.innerHTML = '';
+      const nomesLocais = {
+    'X6': 'Espaço X6',
+    'X5': 'Espaço X5',
+    'Ctr': 'CTR',
+    'Comp': 'Composição',
+    'PIAL/OFC': 'PIAL / Oficina',
+    'VV': 'Virador de vagões'
+  };
 
-          locais.forEach(local => {
-            const pessoasNoLocal = pessoas.filter(p => p.local === local);
+  fetch('/pessoas')
+    .then(res => res.json())
+    .then(pessoas => {
+       console.log(pessoas);
+      const locais = ['X6', 'X5','Ctr', 'Comp', 'PIAL/OFC', 'VV'];
+      const container = document.getElementById('locaisContainer');
+      container.innerHTML = '';
 
-            const card = document.createElement('div');
-            card.className = 'card card-local';
+      locais.forEach(local => {
+        // Filtra só quem está naquele local E com status 🟡 ou ✅
+        const pessoasNoLocal = pessoas.filter(p => 
+          p.local === local && (p.status === '🟡' || p.status === '✅')
+        );
 
-            card.innerHTML = `
-              <div class="card-header">${local} (${pessoasNoLocal.length})</div>
-              <div class="card-body p-3" id="local-${local.replace('/', '-')}-body"></div>
-            `;
+        const card = document.createElement('div');
+        card.className = 'card card-local';
 
-            container.appendChild(card);
+    card.innerHTML = `
+  <div class="card-header">
+    <div class="nome-local">${nomesLocais[local] || local}</div>
+    <div class="quantidade">
+      <span style="color: #666;">Quantidade de pessoas:</span>
+      <span style="color: #28a745; font-weight: bold;">${pessoasNoLocal.length}</span>
+    </div>
+  </div>
+  <div class="card-body p-3" id="local-${local.replace('/', '-')}-body"></div>
+`;
 
-            const body = card.querySelector('.card-body');
 
-            if (pessoasNoLocal.length === 0) {
-              body.innerHTML = '<div class="text-muted">Nenhuma pessoa neste local.</div>';
-            } else {
-              pessoasNoLocal.forEach(p => {
-                const div = document.createElement('div');
-                div.className = 'pessoa-item';
 
-                div.innerHTML = `
-                  <div>
-                    <div><strong>${p.nome}</strong></div>
-                    <div class="status">${p.status}</div>
-                  </div>
-                  <div class="hora">
-                    <div>Início: ${formatarHora(p.hora_inicio)}</div>
-                    <div>Fim: ${formatarHora(p.hora_fim)}</div>
-                  </div>
-                `;
+        container.appendChild(card);
 
-                body.appendChild(div);
-              });
-            }
-          });
-        });
-    }
+        const body = card.querySelector('.card-body');
+
+        if (pessoasNoLocal.length === 0) {
+          body.innerHTML = '<div class="text-muted">Ainda não há pessoas iniciadas neste local. .</div>';
+        } else {
+          // Ordena por hora_fim (mais próxima primeiro)
+pessoasNoLocal
+  .sort((a, b) => {
+    if (!a.hora_fim) return 1;
+    if (!b.hora_fim) return -1;
+    return a.hora_fim.localeCompare(b.hora_fim);
+  })
+  .forEach(p => {
+    const div = document.createElement('div');
+    div.className = 'pessoa-item';
+
+    div.innerHTML = `
+      <div>
+        <span class="status" style="margin-right: 8px;">${p.status}</span><strong>${p.nome}</strong>
+      </div>
+      <div class="hora">
+  <div>Fim: ${formatarHora(p.hora_fim)}</div>
+</div>
+
+    `;
+
+    body.appendChild(div);
+  });
+
+
+        }
+      });
+    });
+}
+
 
     function formatarDataAtual() {
       const hoje = new Date();
