--- a/public/app.html
+++ b/public/app.html
@@ -143,7 +143,7 @@ td.hora-fim {
 }
 /* Menu principal */
 .menu-wrapper {
-  position: relative;
+  position: absolute;
   display: flex;
   margin-bottom: 16px;
 }
@@ -204,13 +204,17 @@ td.hora-fim {
 /* Formulário */
 .form-wrapper {
   display: none;
-  margin-bottom: 16px;
-  padding: 16px;
+  position: fixed;
+  top: 45px; 
   background-color: #f8f9fa;
+  padding: 16px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  max-width: 320px;
+  width: 260px;
+  z-index: 2000;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
+
 
 .form-wrapper form {
   display: flex;
@@ -478,6 +482,9 @@ td.actions {
     -webkit-overflow-scrolling: touch;
   }
 }
+.cabecalho-app {
+  margin-top: 28px;
+}
 
   </style>
 </head>
@@ -489,7 +496,6 @@ td.actions {
     <a href="#" id="abrirFormBtn" class="menu-item">➕ Adicionar Pessoa</a>
     <a href="local.html" class="menu-item">📌  Local</a>
     <a href="dashboard.html" class="menu-item">📊  Tabela</a>
-    <a href="chat.html" class="menu-item">💬 Ir para Chat</a>
     <a href="#" onclick="limparDados()" class="menu-item text-danger">🗑️  Resetar</a>
     
   </div>
